# eka-ai

./: .gitignore  LICENSE  MANIFEST.in  README.md  RELEASING.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: publish.yml  tests.yml
eka_ai/: __init__.py  config.py  downloader.py  generation.py  model.py  py.typed  tokenizer.py  utils.py
examples/: benchmark.py  chat.py  generation.py
tests/: test_config.py  test_generation.py  test_model.py  test_utils.py
